admission/ValidatingAdmissionPolicy/policies/readinessprobe-httpget-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readinessprobe-httpget-host-containers
  annotations:
    kubeapt.io/uuid: "c897bc90-9389-46c2-a431-78fe5037fe21"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    readinessProbe:
      httpGet:
        path: /
        port: 80
        host: 127.0.0.1
